# journalclub

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  env.example  pyproject.toml
.github/: deploy.yml
.github/workflows/: deploy.yml  pages.yml
app/: main.py
app/api/routes/: papers.py  tts.py
app/models/: schemas.py
app/prompts/: podcast_dialog.md  read_aloud_full.md  spoken_summary.md  tts_prompt.md
app/services/: llm_server.py  pdf_parser.py  tts.py
docker/coqui/: Dockerfile  app.py  requirements.txt
docker/espeak/: Dockerfile  app.py
docs/: api-reference.md  deploy-self-host.md  faq.md  getting-started.md  rss-feed.md  topics.md
s/: dev  generate_vctk_samples.sh
site/: active-papers.html  app.js  base.html  config.example.js  config.js  docs.html  header.js  index.html  podcast-builder.html  podcast-builder.js  styles.css  topics.html  topics.js
