[project]
name = "journalclub"
version = "0.1.4"
description = "AI-powered academic paper reader and podcast generator"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.4.0",
    "pypdf>=3.17.0",
    "httpx>=0.25.0",
    "gTTS>=2.4.0",
    "pyttsx3>=2.90",
    "apscheduler==3.11.2",
    "markdown>=3.10.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.10.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"